# ai_manager_backend

./: .env.example  .gitignore  database_setup.py  pyproject.toml  setup.py
src/ai_promana_backend/: config.py  database.py
src/ai_promana_backend/api/v1/: routes.py
src/ai_promana_backend/api/v1/endpoints/: __init__.py  _mock.py  admin.py  daily_reports.py  documents.py  logs.py  managments.py  milestones.py  notifications.py  operation_logs.py  pbc.py  project_members.py  projects.py  risks.py  roles_permissions.py  system_settings.py  tasks.py  teams.py  templates.py  users.py
src/ai_promana_backend/docs/backend-requirements/: BACKEND_API_MASTER.md  README.md
